[gd_scene load_steps=13 format=3 uid="uid://b6ujkmjxjnt28"]

[ext_resource type="PackedScene" uid="uid://cwseclmja5rko" path="res://cards/hand.tscn" id="1_5tvgx"]
[ext_resource type="Script" path="res://battle/reward.gd" id="1_yn03t"]
[ext_resource type="PackedScene" uid="uid://cqjta8uodixn7" path="res://cards/cards/archer.tscn" id="2_5ce5m"]
[ext_resource type="Theme" uid="uid://bd071vba4lnc4" path="res://theme.tres" id="3_nl7t0"]
[ext_resource type="Script" path="res://text_effect_jiggle.gd" id="4_ig78y"]
[ext_resource type="Script" path="res://addons/flipnode/brush2d.gd" id="5_vh647"]
[ext_resource type="Script" path="res://addons/flipnode/stroke.gd" id="6_3oqvi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i3hku"]
size = Vector3(10, 3, 0.01)

[sub_resource type="BoxShape3D" id="BoxShape3D_sukah"]
size = Vector3(10, 3, 0.01)

[sub_resource type="RichTextEffect" id="RichTextEffect_jy63y"]
script = ExtResource("4_ig78y")

[sub_resource type="Resource" id="Resource_n8760"]
script = ExtResource("6_3oqvi")
color = Color(0, 0, 0, 1)
unified_polygon = PackedVector2Array(685.553, 507.017, 685.553, 507.017, 686.334, 507.203, 687.114, 507.388, 687.114, 507.388, 688.675, 508.086, 688.675, 508.086, 689.425, 508.595, 690.176, 509.104, 690.176, 509.104, 690.867, 509.764, 691.559, 510.424, 691.559, 510.425, 692.771, 512.018, 692.772, 512.018, 693.269, 512.932, 693.766, 513.845, 693.766, 513.846, 694.136, 514.849, 694.506, 515.852, 694.506, 515.852, 694.961, 517.96, 694.961, 517.96, 694.968, 518.588, 694.975, 519.309, 694.985, 520.244, 694.997, 521.351, 695.01, 522.586, 695.023, 523.907, 695.038, 525.27, 695.052, 526.633, 695.066, 527.954, 695.079, 529.189, 695.091, 530.296, 695.101, 531.231, 695.108, 531.952, 695.115, 532.58, 695.115, 532.58, 695.11, 533.02, 695.097, 534.182, 695.088, 534.957, 695.079, 535.823, 695.068, 536.749, 695.058, 537.705, 695.047, 538.661, 695.037, 539.587, 695.027, 540.453, 695.018, 541.229, 695.005, 542.39, 695, 542.831, 695.001, 543.811, 695.002, 544.988, 695.003, 546.581, 695.004, 547.524, 695.005, 548.558, 695.006, 549.68, 695.006, 550.886, 695.008, 552.172, 695.008, 553.533, 695.009, 554.967, 695.011, 556.469, 695.012, 558.034, 695.012, 558.84, 695.013, 559.66, 695.013, 560.494, 695.014, 561.341, 695.015, 562.202, 695.016, 563.075, 695.016, 563.96, 695.017, 564.856, 695.017, 565.763, 695.018, 566.681, 695.019, 567.609, 695.02, 568.546, 695.02, 569.493, 695.021, 570.448, 695.022, 571.41, 695.022, 572.381, 695.023, 573.358, 695.024, 574.342, 695.024, 575.332, 695.025, 576.327, 695.026, 577.327, 695.027, 578.332, 695.028, 579.341, 695.028, 580.353, 695.029, 581.368, 695.03, 582.386, 695.03, 583.406, 695.031, 584.427, 695.032, 585.449, 695.033, 586.472, 695.034, 587.495, 695.034, 588.517, 695.035, 589.538, 695.036, 590.558, 695.036, 591.576, 695.037, 592.591, 695.038, 593.603, 695.039, 594.612, 695.039, 595.617, 695.04, 596.617, 695.041, 597.613, 695.042, 598.602, 695.042, 599.586, 695.043, 600.563, 695.044, 601.534, 695.045, 602.497, 695.045, 603.451, 695.046, 604.398, 695.047, 605.335, 695.047, 606.263, 695.048, 607.181, 695.049, 608.088, 695.049, 608.985, 695.05, 609.87, 695.051, 610.743, 695.051, 611.603, 695.052, 612.45, 695.053, 613.284, 695.053, 614.104, 695.054, 614.91, 695.055, 616.475, 695.056, 617.977, 695.057, 619.411, 695.058, 620.773, 695.059, 622.058, 695.06, 623.264, 695.061, 624.386, 695.062, 625.421, 695.062, 626.363, 695.063, 627.956, 695.064, 629.133, 695.065, 630.111, 695.649, 629.511, 696.249, 628.894, 696.936, 628.187, 697.624, 627.479, 698.224, 626.863, 698.809, 626.261, 698.809, 626.261, 699.578, 625.572, 700.367, 624.867, 701.271, 624.058, 702.175, 623.25, 702.963, 622.544, 703.733, 621.856, 703.733, 621.856, 704.512, 621.213, 705.311, 620.553, 706.227, 619.796, 707.142, 619.04, 707.941, 618.38, 708.72, 617.736, 708.72, 617.736, 709.093, 617.486, 710.074, 616.826, 710.729, 616.385, 711.461, 615.893, 712.243, 615.367, 713.051, 614.824, 713.859, 614.281, 714.641, 613.755, 715.373, 613.263, 716.028, 612.823, 717.009, 612.163, 717.381, 611.913, 717.381, 611.913, 718.758, 611.178, 718.758, 611.178, 720.267, 610.721, 720.267, 610.721, 721.711, 610.645, 723.154, 610.569, 723.154, 610.569, 724.715, 610.723, 724.715, 610.723, 726.216, 611.178, 726.216, 611.178, 727.599, 611.917, 727.6, 611.917, 728.812, 612.912, 728.812, 612.912, 729.807, 614.125, 729.807, 614.125, 730.546, 615.508, 730.546, 615.508, 731.002, 617.009, 731.002, 617.009, 731.155, 618.57, 731.155, 618.57, 731.002, 620.131, 731.002, 620.131, 730.546, 621.632, 730.546, 621.632, 729.807, 623.015, 729.807, 623.015, 728.812, 624.227, 728.812, 624.227, 727.6, 625.222, 727.599, 625.222, 726.216, 625.962, 726.216, 625.962, 725.236, 626.202, 724.256, 626.441, 723.276, 627.108, 722.271, 627.791, 721.12, 628.574, 719.969, 629.358, 718.964, 630.041, 717.984, 630.707, 717.292, 631.284, 716.583, 631.876, 715.77, 632.553, 714.957, 633.231, 714.247, 633.823, 713.556, 634.399, 712.883, 635.006, 712.194, 635.628, 711.404, 636.341, 710.614, 637.054, 709.925, 637.676, 709.252, 638.283, 708.371, 639.19, 707.467, 640.119, 706.431, 641.185, 705.394, 642.25, 704.491, 643.18, 703.609, 644.087, 702.853, 645.246, 702.079, 646.435, 701.642, 647.105, 700.74, 648.489, 700.304, 649.159, 699.529, 650.347, 698.774, 651.507, 698.774, 651.507, 697.695, 652.646, 697.695, 652.646, 696.416, 653.552, 696.415, 653.552, 695.249, 654.005, 694.083, 654.458, 693.427, 655.361, 692.771, 656.263, 692.771, 656.264, 691.559, 657.258, 691.559, 657.259, 690.176, 657.998, 690.176, 657.998, 688.675, 658.453, 688.675, 658.453, 687.114, 658.607, 687.114, 658.607, 685.553, 658.453, 685.553, 658.453, 684.052, 657.998, 684.052, 657.998, 682.669, 657.259, 682.669, 657.258, 681.456, 656.264, 681.456, 656.263, 680.878, 655.507, 680.3, 654.75, 679.543, 654.172, 678.787, 653.594, 678.786, 653.594, 677.792, 652.381, 677.791, 652.381, 677.052, 650.998, 677.052, 650.998, 676.597, 649.497, 676.597, 649.497, 676.538, 648.537, 676.479, 647.577, 675.95, 646.999, 675.409, 646.406, 674.788, 645.726, 674.167, 645.047, 673.625, 644.454, 673.096, 643.876, 673.096, 643.876, 672.509, 643.094, 671.907, 642.293, 671.217, 641.375, 670.528, 640.456, 669.926, 639.655, 669.339, 638.874, 668.343, 638.2, 667.322, 637.51, 666.152, 636.718, 664.981, 635.927, 663.96, 635.236, 662.964, 634.563, 662.082, 634.061, 661.178, 633.547, 660.142, 632.957, 659.105, 632.367, 658.201, 631.853, 657.32, 631.351, 656.516, 631.206, 655.691, 631.057, 654.747, 630.886, 653.802, 630.715, 652.978, 630.565, 652.174, 630.42, 652.174, 630.42, 650.673, 629.963, 650.673, 629.963, 649.291, 629.222, 649.291, 629.222, 648.079, 628.226, 648.079, 628.226, 647.086, 627.013, 647.086, 627.012, 646.348, 625.629, 646.348, 625.628, 645.894, 624.127, 645.894, 624.127, 645.742, 622.566, 645.742, 622.566, 645.897, 621.005, 645.897, 621.005, 646.354, 619.505, 646.354, 619.505, 647.095, 618.122, 647.095, 618.122, 648.091, 616.911, 648.091, 616.911, 649.305, 615.917, 649.305, 615.917, 650.689, 615.179, 650.689, 615.179, 652.19, 614.725, 652.19, 614.725, 653.751, 614.573, 653.751, 614.573, 655.038, 614.806, 656.357, 615.045, 657.869, 615.318, 659.381, 615.592, 660.699, 615.831, 661.986, 616.064, 661.986, 616.064, 663.486, 616.52, 663.487, 616.521, 664.815, 617.289, 666.176, 618.076, 666.943, 618.52, 667.736, 618.978, 668.529, 619.437, 669.296, 619.881, 670.658, 620.668, 671.985, 621.436, 671.986, 621.437, 673.106, 622.213, 674.255, 623.009, 674.903, 623.458, 675.572, 623.922, 676.241, 624.385, 676.889, 624.834, 678.038, 625.63, 679.157, 626.406, 679.156, 625.121, 679.156, 623.575, 679.155, 622.595, 679.155, 621.483, 679.154, 620.246, 679.154, 618.888, 679.153, 617.415, 679.153, 615.832, 679.152, 615, 679.152, 614.143, 679.152, 613.261, 679.151, 612.355, 679.151, 611.426, 679.151, 610.473, 679.15, 609.498, 679.15, 608.501, 679.149, 607.484, 679.149, 606.446, 679.149, 605.388, 679.148, 604.312, 679.148, 603.216, 679.148, 602.104, 679.147, 600.974, 679.147, 599.828, 679.146, 598.666, 679.146, 597.489, 679.145, 596.298, 679.145, 595.093, 679.144, 593.874, 679.144, 592.643, 679.143, 591.401, 679.143, 590.147, 679.142, 588.883, 679.142, 587.609, 679.141, 586.326, 679.141, 585.034, 679.14, 583.735, 679.14, 582.428, 679.139, 581.114, 679.139, 579.795, 679.138, 578.471, 679.138, 577.142, 679.137, 575.808, 679.137, 574.472, 679.136, 573.133, 679.136, 571.792, 679.135, 570.45, 679.135, 569.107, 679.134, 567.764, 679.134, 566.422, 679.133, 565.081, 679.133, 563.742, 679.132, 562.406, 679.132, 561.073, 679.131, 559.744, 679.131, 558.419, 679.13, 557.1, 679.13, 555.787, 679.129, 554.48, 679.129, 553.18, 679.128, 551.889, 679.128, 550.605, 679.127, 549.331, 679.127, 548.067, 679.126, 546.814, 679.126, 545.571, 679.125, 544.34, 679.125, 543.122, 679.124, 541.917, 679.124, 540.725, 679.123, 539.549, 679.123, 538.387, 679.123, 537.24, 679.122, 536.111, 679.122, 534.998, 679.121, 533.903, 679.121, 532.826, 679.12, 531.769, 679.12, 530.731, 679.12, 529.713, 679.119, 528.717, 679.119, 527.742, 679.119, 526.789, 679.118, 525.859, 679.118, 524.953, 679.117, 524.071, 679.117, 523.214, 679.117, 522.383, 679.116, 520.799, 679.116, 519.326, 679.115, 517.968, 679.115, 516.731, 679.114, 515.62, 679.114, 514.64, 679.113, 513.094, 679.113, 511.807, 679.113, 511.807, 679.267, 510.608, 679.267, 510.608, 679.722, 509.497, 679.722, 509.497, 680.461, 508.529, 680.461, 508.528, 681.456, 507.755, 681.456, 507.755, 682.669, 507.223, 682.669, 507.223, 684.052, 506.967, 684.052, 506.967)
polygon = PackedVector2Array(685.553, 507.017, 685.553, 507.017, 686.334, 507.203, 687.114, 507.388, 687.114, 507.388, 688.675, 508.086, 688.675, 508.086, 689.425, 508.595, 690.176, 509.104, 690.176, 509.104, 690.867, 509.764, 691.559, 510.424, 691.559, 510.425, 692.771, 512.018, 692.772, 512.018, 693.269, 512.932, 693.766, 513.845, 693.766, 513.846, 694.136, 514.849, 694.506, 515.852, 694.506, 515.852, 694.961, 517.96, 694.961, 517.96, 694.968, 518.588, 694.975, 519.309, 694.985, 520.244, 694.997, 521.351, 695.01, 522.586, 695.023, 523.907, 695.038, 525.27, 695.052, 526.633, 695.066, 527.954, 695.079, 529.189, 695.091, 530.296, 695.101, 531.231, 695.108, 531.952, 695.115, 532.58, 695.115, 532.58, 695.11, 533.02, 695.097, 534.182, 695.088, 534.957, 695.079, 535.823, 695.068, 536.749, 695.058, 537.705, 695.047, 538.661, 695.037, 539.587, 695.027, 540.453, 695.018, 541.229, 695.005, 542.39, 695, 542.831, 695.001, 543.811, 695.002, 544.988, 695.003, 546.581, 695.004, 547.524, 695.005, 548.558, 695.006, 549.68, 695.006, 550.886, 695.008, 552.172, 695.008, 553.533, 695.009, 554.967, 695.011, 556.469, 695.012, 558.034, 695.012, 558.84, 695.013, 559.66, 695.013, 560.494, 695.014, 561.341, 695.015, 562.202, 695.016, 563.075, 695.016, 563.96, 695.017, 564.856, 695.017, 565.763, 695.018, 566.681, 695.019, 567.609, 695.02, 568.546, 695.02, 569.493, 695.021, 570.448, 695.022, 571.41, 695.022, 572.381, 695.023, 573.358, 695.024, 574.342, 695.024, 575.332, 695.025, 576.327, 695.026, 577.327, 695.027, 578.332, 695.028, 579.341, 695.028, 580.353, 695.029, 581.368, 695.03, 582.386, 695.03, 583.406, 695.031, 584.427, 695.032, 585.449, 695.033, 586.472, 695.034, 587.495, 695.034, 588.517, 695.035, 589.538, 695.036, 590.558, 695.036, 591.576, 695.037, 592.591, 695.038, 593.603, 695.039, 594.612, 695.039, 595.617, 695.04, 596.617, 695.041, 597.613, 695.042, 598.602, 695.042, 599.586, 695.043, 600.563, 695.044, 601.534, 695.045, 602.497, 695.045, 603.451, 695.046, 604.398, 695.047, 605.335, 695.047, 606.263, 695.048, 607.181, 695.049, 608.088, 695.049, 608.985, 695.05, 609.87, 695.051, 610.743, 695.051, 611.603, 695.052, 612.45, 695.053, 613.284, 695.053, 614.104, 695.054, 614.91, 695.055, 616.475, 695.056, 617.977, 695.057, 619.411, 695.058, 620.773, 695.059, 622.058, 695.06, 623.264, 695.061, 624.386, 695.062, 625.421, 695.062, 626.363, 695.063, 627.956, 695.064, 629.133, 695.065, 630.111, 695.649, 629.511, 696.249, 628.894, 696.936, 628.187, 697.624, 627.479, 698.224, 626.863, 698.809, 626.261, 698.809, 626.261, 699.578, 625.572, 700.367, 624.867, 701.271, 624.058, 702.175, 623.25, 702.963, 622.544, 703.733, 621.856, 703.733, 621.856, 704.512, 621.213, 705.311, 620.553, 706.227, 619.796, 707.142, 619.04, 707.941, 618.38, 708.72, 617.736, 708.72, 617.736, 709.093, 617.486, 710.074, 616.826, 710.729, 616.385, 711.461, 615.893, 712.243, 615.367, 713.051, 614.824, 713.859, 614.281, 714.641, 613.755, 715.373, 613.263, 716.028, 612.823, 717.009, 612.163, 717.381, 611.913, 717.381, 611.913, 718.758, 611.178, 718.758, 611.178, 720.267, 610.721, 720.267, 610.721, 721.711, 610.645, 723.154, 610.569, 723.154, 610.569, 724.715, 610.723, 724.715, 610.723, 726.216, 611.178, 726.216, 611.178, 727.599, 611.917, 727.6, 611.917, 728.812, 612.912, 728.812, 612.912, 729.807, 614.125, 729.807, 614.125, 730.546, 615.508, 730.546, 615.508, 731.002, 617.009, 731.002, 617.009, 731.155, 618.57, 731.155, 618.57, 731.002, 620.131, 731.002, 620.131, 730.546, 621.632, 730.546, 621.632, 729.807, 623.015, 729.807, 623.015, 728.812, 624.227, 728.812, 624.227, 727.6, 625.222, 727.599, 625.222, 726.216, 625.962, 726.216, 625.962, 725.236, 626.202, 724.256, 626.441, 723.276, 627.108, 722.271, 627.791, 721.12, 628.574, 719.969, 629.358, 718.964, 630.041, 717.984, 630.707, 717.292, 631.284, 716.583, 631.876, 715.77, 632.553, 714.957, 633.231, 714.247, 633.823, 713.556, 634.399, 712.883, 635.006, 712.194, 635.628, 711.404, 636.341, 710.614, 637.054, 709.925, 637.676, 709.252, 638.283, 708.371, 639.19, 707.467, 640.119, 706.431, 641.185, 705.394, 642.25, 704.491, 643.18, 703.609, 644.087, 702.853, 645.246, 702.079, 646.435, 701.642, 647.105, 700.74, 648.489, 700.304, 649.159, 699.529, 650.347, 698.774, 651.507, 698.774, 651.507, 697.695, 652.646, 697.695, 652.646, 696.416, 653.552, 696.415, 653.552, 695.249, 654.005, 694.083, 654.458, 693.427, 655.361, 692.771, 656.263, 692.771, 656.264, 691.559, 657.258, 691.559, 657.259, 690.176, 657.998, 690.176, 657.998, 688.675, 658.453, 688.675, 658.453, 687.114, 658.607, 687.114, 658.607, 685.553, 658.453, 685.553, 658.453, 684.052, 657.998, 684.052, 657.998, 682.669, 657.259, 682.669, 657.258, 681.456, 656.264, 681.456, 656.263, 680.878, 655.507, 680.3, 654.75, 679.543, 654.172, 678.787, 653.594, 678.786, 653.594, 677.792, 652.381, 677.791, 652.381, 677.052, 650.998, 677.052, 650.998, 676.597, 649.497, 676.597, 649.497, 676.538, 648.537, 676.479, 647.577, 675.95, 646.999, 675.409, 646.406, 674.788, 645.726, 674.167, 645.047, 673.625, 644.454, 673.096, 643.876, 673.096, 643.876, 672.509, 643.094, 671.907, 642.293, 671.217, 641.375, 670.528, 640.456, 669.926, 639.655, 669.339, 638.874, 668.343, 638.2, 667.322, 637.51, 666.152, 636.718, 664.981, 635.927, 663.96, 635.236, 662.964, 634.563, 662.082, 634.061, 661.178, 633.547, 660.142, 632.957, 659.105, 632.367, 658.201, 631.853, 657.32, 631.351, 656.516, 631.206, 655.691, 631.057, 654.747, 630.886, 653.802, 630.715, 652.978, 630.565, 652.174, 630.42, 652.174, 630.42, 650.673, 629.963, 650.673, 629.963, 649.291, 629.222, 649.291, 629.222, 648.079, 628.226, 648.079, 628.226, 647.086, 627.013, 647.086, 627.012, 646.348, 625.629, 646.348, 625.628, 645.894, 624.127, 645.894, 624.127, 645.742, 622.566, 645.742, 622.566, 645.897, 621.005, 645.897, 621.005, 646.354, 619.505, 646.354, 619.505, 647.095, 618.122, 647.095, 618.122, 648.091, 616.911, 648.091, 616.911, 649.305, 615.917, 649.305, 615.917, 650.689, 615.179, 650.689, 615.179, 652.19, 614.725, 652.19, 614.725, 653.751, 614.573, 653.751, 614.573, 655.038, 614.806, 656.357, 615.045, 657.869, 615.318, 659.381, 615.592, 660.699, 615.831, 661.986, 616.064, 661.986, 616.064, 663.486, 616.52, 663.487, 616.521, 664.815, 617.289, 666.176, 618.076, 666.943, 618.52, 667.736, 618.978, 668.529, 619.437, 669.296, 619.881, 670.658, 620.668, 671.985, 621.436, 671.986, 621.437, 673.106, 622.213, 674.255, 623.009, 674.903, 623.458, 675.572, 623.922, 676.241, 624.385, 676.889, 624.834, 678.038, 625.63, 679.157, 626.406, 679.156, 625.121, 679.156, 623.575, 679.155, 622.595, 679.155, 621.483, 679.154, 620.246, 679.154, 618.888, 679.153, 617.415, 679.153, 615.832, 679.152, 615, 679.152, 614.143, 679.152, 613.261, 679.151, 612.355, 679.151, 611.426, 679.151, 610.473, 679.15, 609.498, 679.15, 608.501, 679.149, 607.484, 679.149, 606.446, 679.149, 605.388, 679.148, 604.312, 679.148, 603.216, 679.148, 602.104, 679.147, 600.974, 679.147, 599.828, 679.146, 598.666, 679.146, 597.489, 679.145, 596.298, 679.145, 595.093, 679.144, 593.874, 679.144, 592.643, 679.143, 591.401, 679.143, 590.147, 679.142, 588.883, 679.142, 587.609, 679.141, 586.326, 679.141, 585.034, 679.14, 583.735, 679.14, 582.428, 679.139, 581.114, 679.139, 579.795, 679.138, 578.471, 679.138, 577.142, 679.137, 575.808, 679.137, 574.472, 679.136, 573.133, 679.136, 571.792, 679.135, 570.45, 679.135, 569.107, 679.134, 567.764, 679.134, 566.422, 679.133, 565.081, 679.133, 563.742, 679.132, 562.406, 679.132, 561.073, 679.131, 559.744, 679.131, 558.419, 679.13, 557.1, 679.13, 555.787, 679.129, 554.48, 679.129, 553.18, 679.128, 551.889, 679.128, 550.605, 679.127, 549.331, 679.127, 548.067, 679.126, 546.814, 679.126, 545.571, 679.125, 544.34, 679.125, 543.122, 679.124, 541.917, 679.124, 540.725, 679.123, 539.549, 679.123, 538.387, 679.123, 537.24, 679.122, 536.111, 679.122, 534.998, 679.121, 533.903, 679.121, 532.826, 679.12, 531.769, 679.12, 530.731, 679.12, 529.713, 679.119, 528.717, 679.119, 527.742, 679.119, 526.789, 679.118, 525.859, 679.118, 524.953, 679.117, 524.071, 679.117, 523.214, 679.117, 522.383, 679.116, 520.799, 679.116, 519.326, 679.115, 517.968, 679.115, 516.731, 679.114, 515.62, 679.114, 514.64, 679.113, 513.094, 679.113, 511.807, 679.113, 511.807, 679.267, 510.608, 679.267, 510.608, 679.722, 509.497, 679.722, 509.497, 680.461, 508.529, 680.461, 508.528, 681.456, 507.755, 681.456, 507.755, 682.669, 507.223, 682.669, 507.223, 684.052, 506.967, 684.052, 506.967)
holes = Array[PackedVector2Array]([])

[sub_resource type="Resource" id="Resource_8x7s7"]
script = ExtResource("6_3oqvi")
color = Color(0, 0, 0, 1)
unified_polygon = PackedVector2Array(685.553, 507.017, 691.559, 510.424, 694.961, 517.96, 694.965, 522.779, 694.977, 535.484, 694.985, 543.972, 694.994, 553.445, 695.003, 563.576, 695.013, 574.036, 695.023, 584.495, 695.032, 594.626, 695.041, 604.099, 695.049, 612.587, 695.061, 625.292, 695.065, 630.111, 701.892, 623.924, 708.72, 617.736, 718.758, 611.178, 727.6, 611.917, 731.155, 618.57, 728.812, 624.227, 717.984, 630.707, 709.252, 638.283, 703.473, 645.465, 697.695, 652.646, 691.559, 657.259, 687.114, 658.607, 682.669, 657.259, 678.786, 653.594, 676.479, 647.577, 669.339, 638.874, 657.32, 631.351, 649.291, 629.222, 645.742, 622.566, 648.091, 616.911, 653.751, 614.573, 663.486, 616.52, 671.322, 621.463, 679.157, 626.406, 679.155, 621.482, 679.15, 608.5, 679.147, 599.827, 679.143, 590.146, 679.139, 579.794, 679.135, 569.107, 679.131, 558.419, 679.127, 548.067, 679.123, 538.386, 679.12, 529.713, 679.115, 516.731, 679.113, 511.807, 680.461, 508.528, 684.052, 506.967)
polygon = PackedVector2Array(685.553, 507.017, 691.559, 510.424, 694.961, 517.96, 694.965, 522.779, 694.977, 535.484, 694.985, 543.972, 694.994, 553.445, 695.003, 563.576, 695.013, 574.036, 695.023, 584.495, 695.032, 594.626, 695.041, 604.099, 695.049, 612.587, 695.061, 625.292, 695.065, 630.111, 701.892, 623.924, 708.72, 617.736, 718.758, 611.178, 727.6, 611.917, 731.155, 618.57, 728.812, 624.227, 717.984, 630.707, 709.252, 638.283, 703.473, 645.465, 697.695, 652.646, 691.559, 657.259, 687.114, 658.607, 682.669, 657.259, 678.786, 653.594, 676.479, 647.577, 669.339, 638.874, 657.32, 631.351, 649.291, 629.222, 645.742, 622.566, 648.091, 616.911, 653.751, 614.573, 663.486, 616.52, 671.322, 621.463, 679.157, 626.406, 679.155, 621.482, 679.15, 608.5, 679.147, 599.827, 679.143, 590.146, 679.139, 579.794, 679.135, 569.107, 679.131, 558.419, 679.127, 548.067, 679.123, 538.386, 679.12, 529.713, 679.115, 516.731, 679.113, 511.807, 680.461, 508.528, 684.052, 506.967)
holes = Array[PackedVector2Array]([])

[node name="Reward" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn03t")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1440, 810)
render_target_update_mode = 4

[node name="HandTest" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="NewCardArea" parent="SubViewportContainer/SubViewport/HandTest" instance=ExtResource("1_5tvgx")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.34947, 0)
collision_layer = 2
collision_mask = 0
input_ray_pickable = false
sort = true
spread = 0.6

[node name="StaticBody3D" parent="SubViewportContainer/SubViewport/HandTest/NewCardArea" instance=ExtResource("2_5ce5m")]
sidelay = false

[node name="StaticBody3D2" parent="SubViewportContainer/SubViewport/HandTest/NewCardArea" instance=ExtResource("2_5ce5m")]
sidelay = false

[node name="StaticBody3D3" parent="SubViewportContainer/SubViewport/HandTest/NewCardArea" instance=ExtResource("2_5ce5m")]
sidelay = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/HandTest/NewCardArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.591812, 0.126)
shape = SubResource("BoxShape3D_i3hku")

[node name="HandArea" parent="SubViewportContainer/SubViewport/HandTest" instance=ExtResource("1_5tvgx")]
unique_name_in_owner = true
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.0672026, 0)
collision_layer = 2
collision_mask = 0
input_ray_pickable = false
sort = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/HandTest/HandArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.71976, 0.126)
shape = SubResource("BoxShape3D_sukah")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/HandTest"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.150354, 1.934)
fov = 70.0

[node name="RayCast3D" type="RayCast3D" parent="SubViewportContainer/SubViewport/HandTest/Camera3D"]
target_position = Vector3(0, 0, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/HandTest"]
transform = Transform3D(0.846164, -0.191518, 0.497321, 0.165112, 0.981489, 0.0970424, -0.506701, 0, 0.862122, 0, 0.658451, 3.06358)
shadow_enabled = true
shadow_bias = 0.044
shadow_normal_bias = 5.7
shadow_opacity = 0.45
shadow_blur = 0.736

[node name="NewCardSpawn" type="Marker3D" parent="SubViewportContainer/SubViewport/HandTest"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44739, -0.790689, 0)

[node name="Title" type="ColorRect" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
self_modulate = Color(0.161913, 0.0396023, 0.147232, 1)
z_index = 3
layout_mode = 0
offset_left = -56.0
offset_top = 32.0
offset_right = 1494.0
offset_bottom = 129.0
pivot_offset = Vector2(0, 40)
theme = ExtResource("3_nl7t0")

[node name="LocationName" type="RichTextLabel" parent="Title"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 0
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[jiggle amp=0.4 freq=0.5][center]Pick a worm! Any Worm![/center][/jiggle]"
custom_effects = [SubResource("RichTextEffect_jy63y")]

[node name="Title2" type="ColorRect" parent="Title"]
unique_name_in_owner = true
auto_translate_mode = 1
self_modulate = Color(0, 0, 0, 0.313726)
z_index = -1
layout_mode = 0
offset_top = 10.0
offset_right = 1550.0
offset_bottom = 107.0
theme = ExtResource("3_nl7t0")

[node name="ArrowInstruction" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 68)
script = ExtResource("5_vh647")
strokes = [SubResource("Resource_n8760")]
bounds = Rect2(645.742, 506.967, 85.413, 151.64)
lods = [[SubResource("Resource_8x7s7")]]

[connection signal="child_entered_tree" from="SubViewportContainer/SubViewport/HandTest/HandArea" to="." method="_hand_area_child_entered_tree"]
